cadastro de vendas

--- a/src/app/layout/app.footer.component.html
+++ b/src/app/layout/app.footer.component.html
@@ -1,4 +1,11 @@
 <div class="layout-footer">
-    by
-    <span class="font-medium ml-2"> WF Development</span>
+    <div class="container-fluid">
+        <div class="d-flex small">
+          <div class="text-muted">Copyright &copy; Relojoaria Pontual {{ano}}</div>
+          <div>
+            <a href="#">Privacy Policy</a>
+            &middot;
+            <a href="#">Terms &amp; Conditions</a>
+          </div>
+        </div>
 </div>
