--- a/src/app/pages/vendas/vendasCadastro.component.html
+++ b/src/app/pages/vendas/vendasCadastro.component.html
@@ -86,72 +86,101 @@
                     </tr>
                 </ng-template>
             </p-table>
-            <p-dialog [(visible)]="productDialog" [style]="{width: '800px'}" header="{{titulo}}" [modal]="true" class="p-fluid">
-                <div class="content tamanho">
-                    <div class="field">
-                        <label class="mb-3">Categoria</label>
-                        <div class="formgrid grid">
-                            <div class="field-radiobutton col-2">
-                                <p-radioButton id="category1" name="category" value="0"
-                                    [(ngModel)]="product.category"></p-radioButton>
-                                <label for="category1">Produto</label>
+            <p-dialog [(visible)]="productDialog" [style]="{ width: '50vw', height: '650px' }" header="{{titulo}}" [draggable]="true" [resizable]="true" [modal]="true" class="p-fluid">
+                <div class="content">
+                    <div class="formgrid grid">
+                        <div class="field col-7">
+                            <label class="mb-3">Tipo</label>
+                            <div class="formgrid grid">
+                                <div class="field-radiobutton col-2">
+                                    <p-radioButton id="category1" name="category" value="0"
+                                        [(ngModel)]="product.category"></p-radioButton>
+                                    <label for="category1">Produto</label>
+                                </div>
+                                <div class="field-radiobutton col-2" style="margin-left: 100px;">
+                                    <p-radioButton id="category2" name="category" value="1"
+                                        [(ngModel)]="product.category"></p-radioButton>
+                                    <label for="category2">Serviço</label>
+                                </div>
                             </div>
-                            <div class="field-radiobutton col-2">
-                                <p-radioButton id="category2" name="category" value="1"
-                                    [(ngModel)]="product.category"></p-radioButton>
-                                <label for="category2">Serviço</label>
-                            </div>
+                        </div>
+                        <div class="field col-5" style="padding-top: 15px;">
+                            <span class="p-float-label">
+                                <p-calendar  name="data" [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}"
+                                [(ngModel)]="product.price" [showTime]="true"></p-calendar>
+                                <label for="float-input">Data</label>
+                            </span>
+                            <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.description">Campo
+                                Obrigatório.</small>
                         </div>
                     </div>
                     <div class="formgrid grid">
                         <div class="field col" style="padding-top: 15px;">
                             <span class="p-float-label">
-                                <p-dropdown [(ngModel)]="product.inventoryStatus" inputId="inventoryStatus" optionValue="label" [options]="statuses" placeholder="Select">
+                                <p-inputNumber id="price" [(ngModel)]="product.price" mode="currency" currency="BRL"
+                                    locale="pt-BR"
+                                    [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}"></p-inputNumber>
+                                <label for="float-input">Valor total</label>
+                            </span>
+                            <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.description">Campo
+                                Obrigatório.</small>
+                        </div>
+                        <div class="field col" style="padding-top: 15px;">
+                            <span class="p-float-label">
+                                <p-inputNumber id="price" [(ngModel)]="product.price" mode="currency" currency="BRL"
+                                    locale="pt-BR"
+                                    [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}"></p-inputNumber>
+                                <label for="float-input">Valor de custo</label>
+                            </span>
+                            <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.description">Campo
+                                Obrigatório.</small>
+                        </div>
+                    </div>
+                    <div class="formgrid grid">
+                        <div class="field col" style="padding-top: 15px;">
+                            <span class="p-float-label">
+                                <p-dropdown [(ngModel)]="product.inventoryStatus" [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}"
+                                inputId="inventoryStatus" optionValue="label" [options]="statuses" placeholder="Selecione">
                                     <ng-template pTemplate="selectedItem">
-                                        <span *ngIf="product && product.inventoryStatus" [class]="'product-badge status-' + product.inventoryStatus.toString().toLowerCase()">{{product.inventoryStatus}}</span>
+                                        <span *ngIf="product && product.inventoryStatus">{{product.inventoryStatus}}</span>
                                     </ng-template>
                                     <ng-template let-option pTemplate="item">
-                                        <span [class]="'product-badge status-' + option.value">{{option.label}}</span>
+                                        <span>{{option.label}}</span>
                                     </ng-template>
                                 </p-dropdown>
                                 <label for="status">Forma de pagamento</label>
                             </span>
-                        </div>
-                        <div class="field col" style="padding-top: 15px;">
-                            <span class="p-float-label">
-                                <p-inputNumber id="price" [(ngModel)]="product.price" mode="currency" currency="BRL"
-                                    locale="pt-BR"
-                                    [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}"></p-inputNumber>
-                                <label for="float-input">Valor de custo</label>
-                            </span>
-                            <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.description">Campo
-                                Obrigatório.</small>
-                        </div>
-                    </div>
-                    <div class="formgrid grid">
-                        <div class="field col" style="padding-top: 15px;">
-                            <span class="p-float-label">
-                                <p-inputNumber id="price" [(ngModel)]="product.price" mode="currency" currency="BRL"
-                                    locale="pt-BR"
-                                    [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}"></p-inputNumber>
-                                <label for="float-input">Valor de venda</label>
-                            </span>
                             <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.description">Campo
                                 Obrigatório.</small>
                         </div>
                         <div class="field col" style="padding-top: 15px;">
                             <span class="p-float-label">
+                                <p-dropdown [(ngModel)]="product.inventoryStatus" [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}"
+                                inputId="inventoryStatus" optionValue="label" [options]="parcelas" placeholder="Selecione">
+                                    <ng-template pTemplate="selectedItem">
+                                        <span *ngIf="product && product.inventoryStatus">{{product.inventoryStatus}}</span>
+                                    </ng-template>
+                                    <ng-template let-option pTemplate="item">
+                                        <span>{{option.label}}</span>
+                                    </ng-template>
+                                </p-dropdown>
+                                <label for="status">Parcelas</label>
+                            </span>
+                            <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.description">Campo
+                                Obrigatório.</small>
+                        </div>
+                        <div class="field col" style="padding-top: 15px;">
+                            <span class="p-float-label">
                                 <p-inputNumber id="price" [(ngModel)]="product.price" mode="currency" currency="BRL"
                                     locale="pt-BR"
                                     [ngClass]="{'ng-invalid ng-dirty' : submitted && !product.name}"></p-inputNumber>
-                                <label for="float-input">Valor de custo</label>
+                                <label for="float-input">Valor da parcela</label>
                             </span>
                             <small class="ng-dirty ng-invalid" *ngIf="submitted && !product.description">Campo
                                 Obrigatório.</small>
                         </div>
                     </div>
                 </div>
-
                 <ng-template pTemplate="footer">
                     <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text"
                         (click)="hideDialog()"></button>
